--- a/squelettes/sommaire.html
+++ b/squelettes/sommaire.html
@@ -6,7 +6,7 @@
             <div class="navbar-header">.
 			
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                    Menu <i class="fa fa-bars"></i>
+                    Proverb <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
                     <i class="fa fa-play-circle"></i> <span class="light">Proverb</span>
