--- a/Carte interactive/test-popup.html
+++ b/Carte interactive/test-popup.html
@@ -80,8 +80,7 @@ var basic_choropleth = new Datamap({
           "<section><p> Voila des proverbes </p></section>"+
           "<section><p> Proverbe amour </p></section>"+
           "<section><p> Proverbe drole </p></section>"+
-          '<div class="w2ui-centered">Le texte est au centre</div>'+
-          ;
+          '<div class="w2ui-centered">Le texte est au centre</div>';
 
 
 
